<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".GenerateActivity">

    <ImageView
        android:id="@+id/holder"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/holder_blank_img"
        android:contentDescription="@string/qr_code" />

    <TextView
        android:id="@+id/sampleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andika"
        android:text="@string/your_qr_code_will_appear_here"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/holder"
        app:layout_constraintEnd_toEndOf="@+id/holder"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/holder"
        app:layout_constraintTop_toTopOf="@+id/holder" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andika"
        android:text="@string/warning1"
        android:textColor="@color/black"
        android:textSize="9sp"
        android:layout_marginTop="5dp"
        android:textStyle="italic"
        android:layout_marginStart="15sp"
        app:layout_constraintTop_toBottomOf="@+id/holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andika"
        android:text="@string/warning2"
        android:textColor="@color/black"
        android:textSize="9sp"
        android:textStyle="italic"
        android:layout_marginStart="15sp"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="2dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dataTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:background="@color/white"
                android:fontFamily="@font/andika"
                android:hint="@string/enter_the_text_link_for_your_qr_code"
                android:textColorHint="#353535"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/black"
                app:hintEnabled="true"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/holder">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dataEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/andika"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/generate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/andika"
                android:padding="5dp"
                android:text="@string/generate_qr_code"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:cornerRadius="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView" />

            <ImageButton
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/andika"
                android:padding="5dp"
                android:paddingVertical="20dp"
                android:text=""
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/save_btn_background"
                android:src="@drawable/save_img_24px_vectorasset"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:cornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/generate"
                android:contentDescription="@string/save" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>